css/setup/mq.css
@media (width <= 480px) {
  body {
    position: relative;
    /* background-color: red; */
  }

  /* MAIN LAYOUT */
  .main-layout {
    display: grid;
    grid-template-columns: minmax(5px, 1fr) minmax(200px, 400px) minmax(
        5px,
        1fr
      );
  }

  /* MAIN HEADER */
  .main-header {
    width: 90vw;

    display: grid;
    grid-template-columns: 20fr 1fr;
    grid-template-columns: 1fr;
    gap: 0.5rem;
    font-size: 0.6rem;
  }

  .main-header .logo {
    margin-inline-start: 0.2rem;
  }

  .main-header .main-nav {
    position: absolute;
    bottom: -310px;
    left: 0;
    right: 0;

    margin: 0;
    padding: 0;
    width: 90vw;
    height: 300px;
    background-color: #f0f8ffdd;

    border-radius: 30px;
  }

  .main-header .main-nav {
    pointer-events: none;
    animation: fade-out 0.3s ease forwards;
  }

  .main-header .main-nav.active {
    pointer-events: all;
    animation: fade-in 0.3s ease forwards;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .main-header .main-nav-list {
    width: 100%;
  }

  .main-header .main-nav .main-nav-list li a:hover,
  .main-header .main-nav .main-nav-list li a.active {
    display: block;
    width: 80vw;
    box-shadow: 0 0 1px 0.6rem var(--secondary), 0 0 0.8rem 0.7rem var(--primary);
  }

  .main-header .main-nav .main-nav-list {
    text-align: center;
    flex-direction: column;
    height: 100%;
    padding: 1.2rem;
  }

  .main-header .hamburger-menu {
    grid-row: 1;
    grid-column: 2;
    display: inline-block;
  }

  /* GALLERY SECTION */
  .gallery-section {
    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
  }

  /* MEME FILTER */

  .meme-filter {
    display: none;
  }

  /* MEME EDITOR */

  .meme-editor-section {
    flex-direction: column;
    max-height: 60dvh;
    max-width: 100%;

    gap: 1rem;
  }

  .meme-editor-section .canvas-container {
    height: 300px;
    width: 100%;
  }

  .meme-editor-section .meme-editor-controls {
    flex-direction: row;
    align-items: center;
    justify-self: stretch;
    width: 100%;
    max-height: 150px;
  }

  .meme-editor-controls .meme-storage-controls {
    flex-direction: column;
  }

  .meme-editor-controls .line-controls,
  .meme-editor-controls .font-controls,
  .meme-editor-controls .sticker-controls {
    display: grid;
    grid-template-columns: repeat(2, minmax(2rem, 2.5rem));
  }
}

@media (480px < width <= 768px) {
  /* MAIN LAYOUT */

  .main-layout {
    grid-template-columns: minmax(20px, 1fr) minmax(400px, 600px) minmax(
        20px,
        1fr
      );
  }

  /* MAIN HEADER */

  .main-header {
    font-size: 0.5rem;
    gap: 1rem;
  }

  /* GALLERY SECTION */

  .gallery-section {
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  }

  /* MEME FILTER */

  .meme-filter .filter-nav-list {
    font-size: 0.3rem;
  }

  /* MEME EDITOR */

  .meme-editor-section {
    flex-direction: column;
    max-height: 60dvh;
    max-width: 100%;
    gap: 1rem;
  }

  .meme-editor-section .canvas-container {
    max-height: 300px;
    width: 100%;
  }

  .meme-editor-section .meme-editor-controls {
    flex-direction: row;
    align-items: center;
    justify-self: center;
    width: 100%;
    max-height: 150px;
  }

  .meme-editor-controls .meme-storage-controls {
    flex-direction: column;
  }

  .meme-editor-controls .line-controls,
  .meme-editor-controls .font-controls,
  .meme-editor-controls .sticker-controls {
    display: grid;
    grid-template-columns: repeat(3, minmax(0.5rem, 3rem));
  }
}

@media (width > 768px) {
  /* MAIN LAYOUT */
  .main-layout {
    grid-template-columns: minmax(10px, 1fr) 728px minmax(10px, 1fr);
  }

  /* MAIN HEADER */

  .main-header {
    font-size: 0.8rem;
    gap: 10rem;
  }

  /* GALLERY SECTION - same as mid*/
  .gallery-section {
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  }

  /* MEME FILTER */

  .meme-filter .filter-nav-list {
    font-size: 0.6rem;
  }

  /* MEME EDITOR */

  .meme-editor-section {
    flex-direction: row;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 95vw;
    max-height: 70dvh;
    gap: 1rem;
  }

  .meme-editor-section .canvas-container {
    display: flex;
    align-items: center;
    flex-direction: column;

    width: 80%;
    max-height: 470px;

    padding: 1rem;
    border-radius: 15px;
  }

  .meme-editor-section .meme-editor-controls {
    flex-direction: column;
    align-items: center;
    justify-self: start;
    width: 20%;
    max-height: 400px;
  }

  .meme-editor-controls .meme-storage-controls {
    flex-direction: row;
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

